<resources>
    <string name="app_name">LabsCM20172</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Login to continue</string>
    <string name="register">Register</string>
    <string name="names">Names</string>
    <string name="last_names">Last Names</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="phone">Phone</string>
    <string name="postal_address">Postal Address</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="date">Date</string>

    <string name="names_r"></string>
    <string name="last_names_r"></string>
    <string name="sex_r"></string>
    <string name="date_r"></string>
    <string name="phone_r"></string>
    <string name="postal_address_r"></string>
    <string name="email_r"></string>
    <string name="password_r"></string>
    <string name="city_r"></string>

    <string name="incorrect">Username or password is incorrect</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="exit">Exit</string>

</resources>
