<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr10_20172.lab1.EditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="135dp"
                android:layout_height="122dp"
                android:onClick="selectImage"
                app:srcCompat="@android:drawable/alert_dark_frame" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/names"
                android:inputType="text|textCapWords|textNoSuggestions"
                tools:layout_editor_absoluteX="151dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_names"
                android:inputType="text|textCapWords|textNoSuggestions"
                tools:layout_editor_absoluteX="151dp"
                tools:layout_editor_absoluteY="59dp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    tools:layout_editor_absoluteX="151dp"
                    tools:layout_editor_absoluteY="102dp" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    tools:layout_editor_absoluteX="257dp"
                    tools:layout_editor_absoluteY="102dp" />

            </RadioGroup>

            <EditText
                android:id="@+id/editText12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date"
                android:onClick="pickDate"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="191dp" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="234dp" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/postal_address"
                android:inputType="textPostalAddress"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="267dp" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="310dp" />

            <EditText
                android:id="@+id/editText10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="353dp" />

            <EditText
                android:id="@+id/editText11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textCapWords|textAutoComplete"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="396dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="register"
                android:text="@string/register" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
